assets/css/main.css
/**
 * @license
 * MyFonts Webfont Build ID 4572901, 2022-03-25T09:11:15-0400
 * 
 * The fonts listed in this notice are subject to the End User License
 * Agreement(s) entered into by the website owner. All other parties are 
 * explicitly restricted from using the Licensed Webfonts(s).
 * 
 * You may obtain a valid license at the URLs below.
 * 
 * Webfont: Gilroy-Regular by Radomir Tinkov
 * URL: https://www.myfonts.com/fonts/radomir-tinkov/gilroy/regular/
 * 
 * Webfont: Gilroy-ExtraBold by Radomir Tinkov
 * URL: https://www.myfonts.com/fonts/radomir-tinkov/gilroy/extra-bold/
 * 
 * 
 * Webfonts copyright: Copyright © 2016 by Radomir Tinkov. All rights reserved.
 * 
 * © 2022 MyFonts Inc
*/
@import url('//hello.myfonts.net/count/45c6e5');

/**
 * Open Props
 * https://open-props.style/
 */
@import 'open-props/postcss/style';

/* Font definitions */
@import 'fonts.css';

/* Project Props */
@import 'project-props.css';

/* Open Props Normalize */
@import 'normalize.css';

/* Project Normalize */
@import 'project-normalize.css';

/* Theme */
@import 'theme.css';

@import 'buttons.css';
@import 'utilities.css';
@import 'prose.css';

